/** @page CHANGES

@section 2.0.0-dev Changes with libapreq2-2.0.0-dev

- October 14, 2003 - C API [joes]

Added apreq_header_attribute() and fixed mfd parser to allow 
"charset" attribute to appear in the Content-Type header.  Sven
Geisler points out that Opera 7.20 does generate such headers. 

- October 14, 2003 - C API [joes]

Added versioning API following http://apr.apache.org/versioning.html
apreq_env renamed apreq_env_name, and apreq_env_magic_number added
to provide versioning for environments (modules).  The header files 
are now installed to "include/apreq2", and the library is renamed 
"libapreq2".

- October 8, 2003 - configure: static mod_apreq.c [Bojan Smojver, joes]

Add --with-apache2-src configure option, along with --with-apr-config
and --with-apu-config, and provide support for compiling mod_apreq 
into httpd as a static apache module.

- October 1, 2003 - C API: mod_apreq.c [joes]

Support for internal redirects added to the mod_apreq filter.
This ensures any POST data prefetched in the main request 
gets passed along to the subrequest handler(s).

- July 18, 2003 - C bugfix: apreq_decode [Graham Clark]

If the source and destination strings are represented by the same
pointer - e.g. if called as apreq_unescape(s) - string s is modified
incorrectly in general.  Patch includes new unit test.


- July 16, 2003 - Perl API [joes]

Added $req->parse, $req->status, & "preparse" logic 
to $req->param & $req->upload.

- July 16, 2003 - C API [joes]

Added "preparse" logic to apreq_params & apreq_uploads
to bring behavior in line with libapreq-1.x.

- July 15, 2003 - C API [joes]

Dropped param->charset.
Make apreq_brigade_concat public, so mod_apreq can use it
for its ctx->spool brigade.

- July 14, 2003 - Documentation [joes]

Updated Cookie_pod to reflect API changes over v1.X.

- June 30, 2003 - Documentation [joes]

Added doxygen links to Apache::Request and Apache::Cookie 
perl docs.

- June 30, 2003 - C API [joes]
