@@ -2,6 +2,12 @@
 
 @section 2.0.0-dev Changes with libapreq2-2.0.0-dev
 
+- October 17, 2003 - configure: --enable-perl-glue [joes]
+
+The --enable-perl-glue option integrates the perl glue into the 
+normal Unix build cycle.  It is disabled by default, but is silently 
+reenabled if the user configures the source tree via Makefile.PL.
+
 - October 14, 2003 - C API [joes]
 
 Added apreq_header_attribute() and fixed mfd parser to allow 
@@ -14,7 +20,7 @@ Added versioning API following http://apr.apache.org/versioning.html
 apreq_env renamed apreq_env_name, and apreq_env_magic_number added
 to provide versioning for environments (modules).  The header files 
 are now installed to "include/apreq2", and the library is renamed 
-"libapreq2".
+"libapreq2". Also added an apreq2-config script based on apu-config.
 
 - October 8, 2003 - configure: static mod_apreq.c [Bojan Smojver, joes]
 
